<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.erik.proyectoddi.EditarRecordatorio"
    android:orientation="vertical">
    //Nombre
    <TextView
        android:id="@+id/tvNombreEditInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_nombre"
        android:textSize="20dp"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/tvNombreEditInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="20dp"/>

    //hora
    <TextView
        android:id="@+id/tvHoraEditInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_hora"
        android:textSize="20dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tvHoraEditInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="20dp"
        android:onClick="showTimePickerDialog"/>

    //fecha
    <TextView
        android:id="@+id/tvDiaEditInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/text_fecha"
        android:textStyle="bold"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/tvDiaEditInput"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:textSize="20dp"
        android:onClick="showDatePickerDialog"/>

    //aceptar
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/palabraAceptar"
        android:backgroundTint="#749fff"
        android:textSize="20dp"
        android:textStyle="bold" />

    //cancelar
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/palabraCancelar"
        android:backgroundTint="#749fff"
        android:textSize="20dp"
        android:textStyle="bold" />


</LinearLayout>
