
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MenuPrincipal"
    android:id="@+id/menu_principal"

    >

        <LinearLayout
            android:id="@+id/layoutBoton1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <Button android:id="@+id/botonOpcion1"
                android:text="@string/boton_leer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="clckOpcion"

                android:textSize="35dp"
                android:textStyle="bold"
                android:textColor="#4588d6" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout android:id="@+id/layoutBoton2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:animateLayoutChanges="true">
            <Button
                android:id="@+id/botonOpcion2"
                android:text="@string/boton_radio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="clckOpcion"
                android:textSize="35dp"
                android:textStyle="bold"
                android:textColor="#4588d6" />

        </LinearLayout>

       <LinearLayout
           android:id="@+id/layoutBoton3"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="2">
           <Button android:text="@string/boton_recordatorio"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:onClick="clckOpcion"
               android:id="@+id/botonOpcion3"
               android:textSize="35dp"
               android:textStyle="bold"
               android:textColor="#4588d6" />
       </LinearLayout>
</LinearLayout>
